bpo-38962: Fix reference leak in the per-subinterpreter gc